--- a/backend_shop/src/main/resources/templates/productsAdd.html
+++ b/backend_shop/src/main/resources/templates/productsAdd.html
@@ -60,6 +60,12 @@
                     </select>
                 </div>
                 <div class="form-group">
+                    <label for="name">Number in stock</label>
+                    <input type="text" class="form-control" required th:field="*{inStockNumber}" name="inStockNumber" id="inStockNumber"
+                           placeholder="Number of in-stock copies">
+
+                </div>
+                <div class="form-group">
                     <label for="price">Price</label>
                     <input type="number" class="form-control" required th:field="*{price}" name="price" id="price"
                            placeholder="Price">
